force-app/main/default/objects/AWSSettings__mdt/AWSSettings__mdt.object-meta.xml
<CustomObject>
    <label>AWSSettings</label>
    <pluralLabel>AWSSettings</pluralLabel>
</CustomObject>