force-app/main/default/objects/AWSSettings__mdt/fields/Electronic_Signature__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electronic Signature</label>
    <type>Checkbox</type>
</CustomField>