force-app/main/default/objects/AWSSettings__mdt/fields/Push_to_AWS__c.field-meta.xml
<CustomField>
    <fullName>Push_to_AWS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Push to AWS</label>
    <type>Checkbox</type>
</CustomField>