force-app/main/default/objects/AWSSettings__mdt/validationRules/RSI_rule_for_eSignature_and_Signature.validationRule-meta.xml
<ValidationRule>
    <fullName>RSI_rule_for_eSignature_and_Signature</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
  NOT(ISBLANK(TEXT( Signature_Status__c ))),
   Electronic_Signature__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>Electronic_Signature__c</errorDisplayField>
    <errorMessage>You must check Electronic Signature.</errorMessage>
</ValidationRule>